adapt bootstrap.cmd build batch script
adapt bootstrap.cmd windows batch script so it is equivalent to
bootstrap.sh unix shell script.